chore: progress on ringspace service
Add controller, storage layers, wire up routing.

Type patch for adding custom express.Request.context.
